just a simple change

--- a/Probabilities.ipynb
+++ b/Probabilities.ipynb
@@ -332,8 +332,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Algebra"
+    "# Arrays"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ones:  [[ 1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.]\n",
+      " [ 1.  1.  1.  1.]]\n",
+      "Zeroes:  [[[0 0 0 0]\n",
+      "  [0 0 0 0]\n",
+      "  [0 0 0 0]]\n",
+      "\n",
+      " [[0 0 0 0]\n",
+      "  [0 0 0 0]\n",
+      "  [0 0 0 0]]]\n",
+      "Random:  [[ 0.00922408  0.31110669]\n",
+      " [ 0.95704349  0.8858497 ]]\n",
+      "Empty:  [[ 0.  0.]\n",
+      " [ 0.  0.]\n",
+      " [ 0.  0.]]\n",
+      "Full:  [[7 7]\n",
+      " [7 7]]\n",
+      "Evenly Spaced:  [10 15 20]\n",
+      "Evenly Spaced 2:  [ 0.    0.25  0.5   0.75  1.    1.25  1.5   1.75  2.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Create an array of ones\n",
+    "print('Ones: ', np.ones((3,4)))\n",
+    "\n",
+    "# Create an array of zeros\n",
+    "print('Zeroes: ', np.zeros((2,3,4),dtype=np.int16)) #2 deep, 3 long, 4 wide\n",
+    "\n",
+    "# Create an array with random values\n",
+    "print('Random: ', np.random.random((2,2)))\n",
+    "\n",
+    "# Create an empty array\n",
+    "print('Empty: ', np.empty((3,2)))\n",
+    "\n",
+    "# Create a full array\n",
+    "print('Full: ', np.full((2,2),7))\n",
+    "\n",
+    "# Create an array of evenly-spaced values\n",
+    "print('Evenly Spaced: ', np.arange(10,25,5))\n",
+    "\n",
+    "# Create an array of evenly-spaced values\n",
+    "print('Evenly Spaced 2: ', np.linspace(0,2,9))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This is more code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
