Simplifying the code to focus on the algorithm and errors

--- a/MGMPayroll3.ipynb
+++ b/MGMPayroll3.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import urllib\n",
     "from sodapy import Socrata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -26,6 +25,7 @@
     }
    ],
    "source": [
+    "#Download the data and create a dataframe\n",
     "client = Socrata(\"data.montgomeryal.gov\", None)\n",
     "results = client.get(\"pjb8-sd6v\", limit=10000)\n",
     "raw_data = pd.DataFrame.from_records(results)"
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create copy of raw_data\n",
-    "data = raw_data.sort_index()"
+    "#Make a copy of raw_data and only the columns we need\n",
+    "data = raw_data.drop(['annualsalaryytd', 'name', 'otherpayamt', 'otherpaydesc', 'overtimeamt', 'hire_date'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -52,84 +52,35 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2405 entries, 0 to 2404\n",
-      "Data columns (total 12 columns):\n",
-      "annual_salary      2405 non-null float64\n",
-      "annualsalaryytd    2400 non-null float64\n",
-      "department         2405 non-null object\n",
-      "grade              2405 non-null object\n",
-      "hire_date          2405 non-null datetime64[ns]\n",
-      "name               2405 non-null object\n",
-      "otherpayamt        2405 non-null float64\n",
-      "otherpaydesc       1313 non-null object\n",
-      "overtimeamt        2405 non-null float64\n",
-      "position_title     2405 non-null object\n",
-      "positiontype       2405 non-null object\n",
-      "step               2405 non-null int64\n",
-      "dtypes: datetime64[ns](1), float64(4), int64(1), object(6)\n",
-      "memory usage: 225.5+ KB\n"
+      "Data columns (total 6 columns):\n",
+      "annual_salary     2405 non-null float64\n",
+      "department        2405 non-null object\n",
+      "grade             2405 non-null object\n",
+      "position_title    2405 non-null object\n",
+      "positiontype      2405 non-null object\n",
+      "step              2405 non-null int64\n",
+      "dtypes: float64(1), int64(1), object(4)\n",
+      "memory usage: 112.8+ KB\n"
      ]
     }
    ],
    "source": [
-    "#Convert columns to appropriate types, data cleanup, etc.\n",
-    "cat_cols = pd.Index(['department', 'otherpaydesc', 'positiontype'])\n",
-    "#data[cat_cols] = data[cat_cols].apply(pd.Categorical)\n",
-    "\n",
-    "data['otherpayamt'] = data['otherpayamt'].fillna(0) #replace null values with 0s\n",
-    "data['overtimeamt'] = data['overtimeamt'].fillna(0) #replace null values with 0s\n",
-    "data['hire_date'] = pd.to_datetime(data['hire_date'])\n",
-    "\n",
-    "num_cols = pd.Index(['annual_salary', 'annualsalaryytd', 'otherpayamt', 'overtimeamt', 'step'])\n",
+    "#Convert necessary columns to numeric\n",
+    "num_cols = pd.Index(['annual_salary', 'step'])\n",
     "data[num_cols] = data[num_cols].apply(pd.to_numeric, errors='coerce')\n",
-    "\n",
-    "#data.set_index('hire_date', drop=False, inplace=True)\n",
     "\n",
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create a dictionary for departments by type and append it to the dataframe\n",
-    "positions = data.department.unique()\n",
-    "types = ['Public Works', 'Public Safety', 'Maintenance/Sanitation', \n",
-    "         'Public Works', 'Public Works', 'Maintenance/Sanitation', \n",
-    "         'Public Safety', 'Public Safety', 'Public Works', 'Public Works', \n",
-    "         'Admin & Judicial', 'Maintenance/Sanitation', 'Public Works', \n",
-    "         'Admin & Judicial', 'Maintenance/Sanitation',  'Admin & Judicial', 'Admin & Judicial',\n",
-    "         'Maintenance/Sanitation', 'Public Safety', 'Admin & Judicial', \n",
-    "         'Public Works', 'Admin & Judicial', 'Admin & Judicial', \n",
-    "         'Admin & Judicial', 'Public Safety', 'Public Safety', \n",
-    "         'Admin & Judicial', 'Admin & Judicial', 'Admin & Judicial', \n",
-    "         'Admin & Judicial', 'Public Safety']\n",
-    "gov_dict = dict(zip(positions, types))\n",
-    "data['category'] = data['department'].map(gov_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, Imputer\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn_pandas import DataFrameMapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a class to select numerical or categorical columns \n",
     "# since Scikit-Learn doesn't handle DataFrames yet\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, attribute_names):\n",
     "        self.attribute_names = attribute_names\n",
@@ -141,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,12 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "\n",
     "num_attribs = [\"step\"]\n",
-    "cat_attribs = [\"department\", \"grade\", \"position_title\", \"positiontype\", \"category\"]\n",
+    "cat_attribs = [\"department\", \"grade\", \"position_title\", \"positiontype\"]\n",
     "\n",
     "num_pipeline = Pipeline([\n",
     "        ('selector', DataFrameSelector(num_attribs)),\n",
@@ -361,18 +314,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Select only the necessary columns\n",
-    "X = data.drop(['annualsalaryytd', 'name', 'otherpayamt', 'otherpaydesc', 'overtimeamt', 'hire_date', 'annual_salary'], axis=1)\n",
+    "X = data.drop(['annual_salary'], axis=1)\n",
     "y = data[[\"annual_salary\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,16 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Split the dataset\n",
+    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_transformed, y, test_size=0.20, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +354,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,16 +368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1003.2107461290498"
+       "1003.2036467689019"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,99 +392,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "236734238916901.53"
+       "62221675860410.125"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Now check the mean squared error of the training data\n",
-    "lin_mse = mean_squared_error(y_test, lin_reg.predict(X_test))\n",
+    "#Now check the mean squared error of the training data.  What the!?\n",
+    "predictions = lin_reg.predict(X_test)\n",
+    "lin_mse = mean_squared_error(y_test, predictions)\n",
     "lin_rmse = np.sqrt(lin_mse)\n",
     "lin_rmse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r2/variance :  0.995621044238\n",
-      "Residual sum of squares: 1006431.80\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions_train = lin_reg.predict(X_train)\n",
-    "print(\"r2/variance : \", lin_reg.score(X_train, y_train))\n",
-    "print(\"Residual sum of squares: %.2f\"\n",
-    "              % np.mean((lin_reg.predict(X_train) - y_train) ** 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r2/variance :  -2.52821285125e+20\n",
-      "Residual sum of squares: 56043099875564615923895631872.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "#clearly this is not right\n",
-    "predictions = lin_reg.predict(X_test)\n",
-    "print(\"r2/variance : \", lin_reg.score(X_test, y_test))\n",
-    "print(\"Residual sum of squares: %.2f\"\n",
-    "              % np.mean((lin_reg.predict(X_test) - y_test) ** 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[           47000],\n",
-       "       [           42786],\n",
-       "       [           51700],\n",
-       "       [           38750],\n",
-       "       [           32328],\n",
-       "       [           40764],\n",
-       "       [           57344],\n",
-       "       [           35000],\n",
-       "       [           40956],\n",
-       "       [           65972],\n",
-       "       [           17996],\n",
-       "       [           55156],\n",
-       "       [           32328],\n",
-       "       [           34350],\n",
-       "       [           39752],\n",
-       "       [           39752],\n",
-       "       [           30862],\n",
-       "       [3648648306793169]], dtype=int64)"
+       "array([[          47003],\n",
+       "       [          42783],\n",
+       "       [          51699],\n",
+       "       [          38749],\n",
+       "       [          32330],\n",
+       "       [          40761],\n",
+       "       [          57347],\n",
+       "       [          34999],\n",
+       "       [          40954],\n",
+       "       [          65963],\n",
+       "       [          18003],\n",
+       "       [          55162],\n",
+       "       [          32330],\n",
+       "       [          34351],\n",
+       "       [          39750],\n",
+       "       [          39750],\n",
+       "       [          30862],\n",
+       "       [839562765827899]], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +454,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2179    46946.39\n",
+       "1525    43117.57\n",
+       "1377    50968.74\n",
+       "2372    38316.10\n",
+       "1125    32318.00\n",
+       "1697    40676.69\n",
+       "1973    57911.24\n",
+       "1027    34567.10\n",
+       "929     40894.26\n",
+       "210     63243.98\n",
+       "1517    18000.00\n",
+       "1724    54436.30\n",
+       "927     32318.00\n",
+       "2028    34599.34\n",
+       "1908    39456.35\n",
+       "56      39456.35\n",
+       "1938    29955.95\n",
+       "218     50251.76\n",
+       "Name: annual_salary, dtype: float64"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check the first 18 y_test values\n",
+    "y_test.annual_salary[:18]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -551,41 +503,34 @@
        "Name: annual_salary, dtype: float64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#It should be closer to this number\n",
+    "#The 18th prediction should be closer to this number\n",
     "y_test.annual_salary[17:18]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "annual_salary                  50251.8\n",
-       "annualsalaryytd                5798.29\n",
-       "department          CITY INVESTIGATION\n",
-       "grade                              A08\n",
-       "hire_date          2017-02-24 00:00:00\n",
-       "name               BAROUSSE, WILLIAM M\n",
-       "otherpayamt                          0\n",
-       "otherpaydesc                       NaN\n",
-       "overtimeamt                          0\n",
-       "position_title       CITY INVESTIGATOR\n",
-       "positiontype                 Full Time\n",
-       "step                                 4\n",
-       "category                 Public Safety\n",
+       "annual_salary                50251.8\n",
+       "department        CITY INVESTIGATION\n",
+       "grade                            A08\n",
+       "position_title     CITY INVESTIGATOR\n",
+       "positiontype               Full Time\n",
+       "step                               4\n",
        "Name: 218, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +571,6 @@
        "      <th>position_title</th>\n",
        "      <th>positiontype</th>\n",
        "      <th>step</th>\n",
-       "      <th>category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -637,7 +581,6 @@
        "      <td>LIBRARY ASSISTANT I</td>\n",
        "      <td>Full Time</td>\n",
        "      <td>2</td>\n",
-       "      <td>Public Works</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>218</th>\n",
@@ -646,7 +589,6 @@
        "      <td>CITY INVESTIGATOR</td>\n",
        "      <td>Full Time</td>\n",
        "      <td>4</td>\n",
-       "      <td>Public Safety</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>219</th>\n",
@@ -655,25 +597,19 @@
        "      <td>FIRE LIEUTENANT</td>\n",
        "      <td>Full Time</td>\n",
        "      <td>5</td>\n",
-       "      <td>Public Safety</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             department grade       position_title positiontype  step  \\\n",
-       "217             LIBRARY   A02  LIBRARY ASSISTANT I    Full Time     2   \n",
-       "218  CITY INVESTIGATION   A08    CITY INVESTIGATOR    Full Time     4   \n",
-       "219     FIRE DEPARTMENT   PSC      FIRE LIEUTENANT    Full Time     5   \n",
-       "\n",
-       "          category  \n",
-       "217   Public Works  \n",
-       "218  Public Safety  \n",
-       "219  Public Safety  "
+       "             department grade       position_title positiontype  step\n",
+       "217             LIBRARY   A02  LIBRARY ASSISTANT I    Full Time     2\n",
+       "218  CITY INVESTIGATION   A08    CITY INVESTIGATOR    Full Time     4\n",
+       "219     FIRE DEPARTMENT   PSC      FIRE LIEUTENANT    Full Time     5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,6 +617,37 @@
    "source": [
     "#Comparison of similar nearby records\n",
     "X.iloc[217:220]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ -1.11749936e+14,  -2.18609563e+13,  -3.01885247e+13,\n",
+       "         -5.74222347e+13,  -1.05990542e+14,  -5.84401447e+12,\n",
+       "         -4.59411108e+13,  -8.46318504e+13,  -4.03443478e+13,\n",
+       "         -2.11014104e+13,  -2.95518834e+11,  -4.04503420e+13,\n",
+       "         -7.02792413e+13,  -5.84401449e+12,  -4.04503420e+13,\n",
+       "         -2.18609563e+13,  -4.04503420e+13,  -5.84401445e+12,\n",
+       "         -5.84401445e+12,  -4.96538202e+12]),\n",
+       " array([  8.39562766e+14,   7.72504222e+12,   6.88653902e+13,\n",
+       "          9.30614592e+13,   2.96495886e+13,   4.96641012e+14,\n",
+       "          2.09965187e+13,   9.15286058e+14,   6.86404834e+13,\n",
+       "          4.70044339e+13,   3.15838781e+13]))"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#All the predictions that are way off\n",
+    "predictions[predictions < 0], predictions[predictions > 150000]"
    ]
   }
  ],
