uploading scores notebook and others

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -848,11 +848,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Economic Growth % Xi  S&P 500 Returns % Yi \n",
+    " \n",
+    "2.3    8\n",
+    "2.5    9\n",
+    "3.6    13\n",
+    "\n",
+    "Find the sample mean for x and y. (mean of x = 2.8 and mean of y=10)\n",
+    "\n",
+    "For each value x, find x - the mean of x. (2.3 - 2.8) = -0.5, (2.5 - 2.8) = -0.3, (3.6 - 2.8) = 0.8\n",
+    "\n",
+    "For each value y, find y - the mean of y. (8 - 10) = -2, (9 - 10) = -1, (13 - 10) = 3\n",
+    "\n",
+    "Multiply the first value x (-0.5) with the first y value (-2), the second x value with the second y value, and so on.\n",
+    "\n",
+    "(-0.5 * -2) = 1, (-0.3 * -1) = 0.3, (0.8 * 3) = 2.4\n",
+    "\n",
+    "Sum the output of the values from Step 4 and divide by n-1. (1 + 0.3 + 2.4) / (3-1) = (3.7 / 2) = 1.85"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1.2, 1.8, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = [4, 5, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 1.        ,  0.98974332],\n",
+       "        [ 0.98974332,  1.        ]]), array([[ 0.84,  2.4 ],\n",
+       "        [ 2.4 ,  7.  ]]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(x, y), np.cov(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.84,  2.4 ],\n",
+       "       [ 2.4 ,  7.  ]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cov(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4.8/2"
+   ]
   }
  ],
  "metadata": {
