--- a/AbortionLaws.ipynb
+++ b/AbortionLaws.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create a function to extract the table data\n",
+    "#create a loop to extract the table data\n",
     "data = []\n",
     "for row in rows[1:]:\n",
     "    cols = row.find_all('td')\n",
@@ -65,6 +65,159 @@
     "column_names = [np.array(['State Restrictions on Later Abortion', 'State Restrictions on Later Abortion', 'Exceptions', 'Exceptions', 'Exceptions', 'When a Later Abortion is Performed a Second Physician Must:', 'When a Later Abortion is Performed a Second Physician Must:']),\n",
     "          np.array(['Limit on Abortion After Viability', 'Limit on Abortion at a Specific Gestational Age', 'Life and Health', 'Life and Physical Health', 'Life', 'Attend', 'Approve'])]\n",
     "data.columns = column_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 43 entries, Alabama to Wyoming\n",
+      "Data columns (total 7 columns):\n",
+      "(State Restrictions on Later Abortion, Limit on Abortion After Viability)                  43 non-null object\n",
+      "(State Restrictions on Later Abortion, Limit on Abortion at a Specific Gestational Age)    43 non-null object\n",
+      "(Exceptions, Life and Health)                                                              43 non-null object\n",
+      "(Exceptions, Life and Physical Health)                                                     43 non-null object\n",
+      "(Exceptions, Life)                                                                         43 non-null object\n",
+      "(When a Later Abortion is Performed a Second Physician Must:, Attend)                      43 non-null object\n",
+      "(When a Later Abortion is Performed a Second Physician Must:, Approve)                     43 non-null object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 2.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">State Restrictions on Later Abortion</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Exceptions</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">When a Later Abortion is Performed a Second Physician Must:</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Limit on Abortion After Viability</th>\n",
+       "      <th>Limit on Abortion at a Specific Gestational Age</th>\n",
+       "      <th>Life and Health</th>\n",
+       "      <th>Life and Physical Health</th>\n",
+       "      <th>Life</th>\n",
+       "      <th>Attend</th>\n",
+       "      <th>Approve</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>26</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>39</td>\n",
+       "      <td>29</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       State Restrictions on Later Abortion  \\\n",
+       "          Limit on Abortion After Viability   \n",
+       "count                                    43   \n",
+       "unique                                    2   \n",
+       "top                                           \n",
+       "freq                                     26   \n",
+       "\n",
+       "                                                            Exceptions  \\\n",
+       "       Limit on Abortion at a Specific Gestational Age Life and Health   \n",
+       "count                                               43              43   \n",
+       "unique                                              11               5   \n",
+       "top                                                                      \n",
+       "freq                                                15              24   \n",
+       "\n",
+       "                                      \\\n",
+       "       Life and Physical Health Life   \n",
+       "count                        43   43   \n",
+       "unique                        5    3   \n",
+       "top                                    \n",
+       "freq                         23   39   \n",
+       "\n",
+       "       When a Later Abortion is Performed a Second Physician Must:          \n",
+       "                                                            Attend Approve  \n",
+       "count                                                  43               43  \n",
+       "unique                                                  4                4  \n",
+       "top                                                                         \n",
+       "freq                                                   29               32  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
    ]
   },
   {
@@ -231,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +587,7 @@
        "Connecticut              Life and Health                                    "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +684,7 @@
        "4                                    "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +976,7 @@
        "29                             Life£           NaN     1.0    NaN"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3156,10 +3309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'A':['A', 'B', 'C'], 'B':[4, 5, 6]})\n",
+    "\n",
+    "group_df = df.groupby('A').mean()\n",
+    "\n",
+    "type(group_df)\n"
+   ]
   }
  ],
  "metadata": {
